# ft_perception

./: CMakeLists.txt
both_arms_ft/: config.ini
include/: ft_estimate.h  ft_module.h
left_arm_ft/: config.ini
right_arm_ft/: config.ini
src/: ft_estimate.cpp  ft_module.cpp  main.cpp
